# rpcd-system-plugin

./: CMakeLists.txt  README.md  sysinfo.c
